# point-click_engine_sfml

./: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  main.hpp
actions/: Action.cpp  Action.hpp  ActionReader.cpp  ActionReader.hpp  UserAction.cpp  UserAction.hpp  XMLActionDefaultReader.cpp  XMLActionDefaultReader.hpp
conf/: ConfReader.cpp  ConfReader.hpp
data/actions/: actions.conf_xml  actions_default.conf_xml
data/config/: default.conf_txt
data/levels/: character_names.conf_json  character_names.conf_xml  level1.conf_json  level1.conf_xml  level2.conf_xml  level3.conf_xml  sprites.conf_json  sprites.conf_xml  sprites_includes.conf_xml
data/translations/: dct_EN.conf_json  dct_EN.conf_xml  dct_FR.conf_json  dct_FR.conf_xml
events/: EventDispatcher.cpp  EventDispatcher.hpp  GUIActionType.hpp  LevelSwitchObserver.cpp  LevelSwitchObserver.hpp  Observable.cpp  Observable.hpp  Observer.cpp  Observer.hpp  SwitchLevelAction.hpp
exceptions/: Exception.cpp  Exception.hpp  ExceptionScene.cpp  ExceptionScene.hpp  KeyException.cpp  KeyException.hpp  NoSuchConfType.cpp  NoSuchConfType.hpp
game/: AbstractAction.hpp  AbstractScene.cpp  AbstractScene.hpp  Action.cpp  Action.hpp  GameScene.cpp  GameScene.hpp  Object.cpp  Object.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  SharedDataPool.cpp  SharedDataPool.hpp
game/action_panel/: ActionPanel.cpp  ActionPanel.hpp  Button.cpp  Button.hpp
game/actions/: GotoAction.cpp  GotoAction.hpp  GrabAction.cpp  GrabAction.hpp  NOOPAction.cpp  NOOPAction.hpp  SeeAction.cpp  SeeAction.hpp  TalkAction.cpp  TalkAction.hpp  (+2 more)
levels/: ActionOnObject.cpp  ActionOnObject.hpp  LevelLoader.cpp  LevelLoader.hpp  LoaderAction.cpp  LoaderAction.hpp
pathfind/: Collider.cpp  Collider.h  Dikjtra.cpp  Dikjtra.h  Tuple.cpp  Tuple.h
translations/: JSONTranslationReader.cpp  JSONTranslationReader.hpp  TranslationReader.cpp  TranslationReader.hpp  XMLTranslationReader.cpp  XMLTranslationReader.hpp
(+3 files in other folders)
